# historical-figures-library

./: .gitignore  CLAUDE.md  CONTEXT.md  LIBRARY.md  README.md  pyproject.toml
.scratch/figure-library-expansion/: DECISIONS.md  PRD.md
.scratch/figure-web-search/: PRD.md
.scratch/user-profiles/: PRD.md
docs/adr/: 0001-convener-orchestrated-debate.md  0002-interactive-clarifying-questions.md  0003-native-web-search-for-figures-only.md  0004-web-frontend-via-background-thread-and-websocket.md
figures/: TEMPLATE.md  abraham-lincoln.md  alexander-hamilton.md  charlie-munger.md  confucius.md  deng-xiaoping.md  frederick-douglass.md  han-feizi.md  jd-rockefeller.md  lee-kuan-yew.md  mao-zedong.md  marcus-aurelius.md  martin-luther-king-jr.md  milton-friedman.md  ray-dalio.md  sun-tzu.md  sun-yat-sen.md  thomas-jefferson.md  warren-buffett.md  wu-zetian.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: CabinetPicker.tsx  ClarifyingPrompt.tsx  QuestionForm.tsx  ResultPanel.tsx  TranscriptView.tsx
src/council/: cli.py  convener.py  figure.py  llm.py  paths.py  session.py  transcript.py  web.py
tests/: fakes.py  test_convener.py  test_figure.py  test_llm.py  test_session.py  test_transcript.py  test_web.py
