[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "council"
version = "0.1.0"
description = "A council of historical-figure AI agents who debate the questions you bring them."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
council = "council.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/council"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
